<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Via</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_open_in_new">Open in new tab</string>
    <string name="action_save_img">Save image</string>
    <string name="action_share">Share</string>
    <string name="action_history">History</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_night">Night mode</string>
    <string name="action_copy">Copy link</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="action_unblock_url">Unblock link</string>
    <string name="action_block_url">Block link</string>
    <string name="action_copy_text">Copy text</string>
    <string name="action_copy_link_text">Copy link text</string>
    <string name="action_tools">Tools</string>
    <string name="settings">Settings</string>
    <string name="location">Location access</string>
    <string name="donate">Donate</string>
    <string name="orientation">Orientation</string>
    <string name="follow_system">System</string>
    <string name="orientation_auto">Auto</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_landscape">Landscape</string>
    <string name="agent">User-agent</string>
    <string name="home">Homepage</string>
    <string name="fullscreen">Auto-hide toolbars</string>
    <string name="download">Download location</string>
    <string name="size">Text size</string>
    <string name="search">Search engine</string>
    <string name="search_hint">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_blank">Blank page</string>
    <string name="agent_iphone">iPhone</string>
    <string name="agent_symbian">Symbian</string>
    <string name="agent_custom">Custom</string>
    <string name="dialog_download">Would you like to download this file?</string>
    <string name="title_warning">Warning</string>
    <string name="title_custom_homepage">Custom homepage</string>
    <string name="action_webpage">Webpage</string>
    <string name="hint_title">Title</string>
    <string name="hint_url">URL</string>
    <string name="hint_folder">Folder</string>
    <string name="title_edit_bookmark">Edit bookmark</string>
    <string name="action_edit">Edit</string>
    <string name="action_incognito">Incognito mode</string>
    <string name="action_find">Find in page</string>
    <string name="download_pending">Starting download\u2026</string>
    <string name="cannot_download">It can be downloaded only from \"http\" or \"https\" URLs.</string>
    <string name="bookmarks_imported">%1$d bookmarks imported</string>
    <string name="custom_url">Custom URL</string>
    <string name="baidu_url">Baidu</string>
    <string name="shenma_url">ShenMa</string>
    <string name="bing_url">Bing</string>
    <string name="haosou_url">360 Search</string>
    <string name="duckduckgo_url">DuckDuckGo</string>
    <string name="startpage_url">StartPage</string>
    <string name="yahoo_url">Yahoo</string>
    <string name="yandex_url">Yandex</string>
    <string name="google_url">Google</string>
    <string name="sougou_url">Sogou</string>
    <string name="block_ads">Ad blocking</string>
    <string name="title_form_resubmission">Form resubmission</string>
    <string name="message_form_resubmission">Would you like to resend the data?</string>
    <string name="action_dont_allow">Refuse</string>
    <string name="title_sign_in">Sign in</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="untitled">Untitled</string>
    <string name="image_auto">Show images only via Wi-Fi</string>
    <string name="image_off">Block images</string>
    <string name="image_on">Show images</string>
    <string name="title_file_chooser">File chooser</string>
    <string name="import_bookmarks">Import bookmarks</string>
    <string name="export_bookmarks_to">Export bookmarks to: %1$s</string>
    <string name="import_bookmark_error">Couldn\'t import bookmarks from file!</string>
    <string name="message_add_bookmark">Bookmark added successfully</string>
    <string name="message_exit">Press one more time to exit</string>
    <string name="dialog_message">Message</string>
    <string name="wait_a_moment">Wait a moment&#8230;</string>
    <string name="toast_operation_failed">Operation failed</string>
    <string name="volume">Use volume keys to scroll</string>
    <string name="msg_intent">Allow website to open your app?</string>
    <string name="setting_default">Set as default browser</string>
    <string name="toast_copy_url_successful">Link copied successfully</string>
    <string name="toast_copy_text_successful">Text copied successfully</string>
    <string name="incognito_on">You\'ve gone incognito</string>
    <string name="incognito_off">Incognito is off</string>
    <string name="operation_none">None</string>
    <string name="operation_reload">Reload</string>
    <string name="operation_top">Scroll to top</string>
    <string name="operation_bottom">Scroll to bottom</string>
    <string name="operation_input">Input URL</string>
    <string name="operation_openbookmark">Open bookmark</string>
    <string name="operation_open_bookmarks_dialog">Open bookmarks dialog</string>
    <string name="operation_openhistory">Open history</string>
    <string name="operation_closetab">Close tab</string>
    <string name="operation_lasttab">Last tab</string>
    <string name="operation_nexttab">Next tab</string>
    <string name="operation_goback">Go back</string>
    <string name="operation_goforward">Go forward</string>
    <string name="settings_operation">Gestures</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_about">About</string>
    <string name="url_box">URL field content</string>
    <string name="url_box_domain">Domain</string>
    <string name="action_pcview">Desktop site</string>
    <string name="action_source">View source</string>
    <string name="action_translate">Translate</string>
    <string name="title_edit_folder">Edit folder</string>
    <string name="msg_delete_folder">Would you like to delete this folder?</string>
    <string name="desc_suggestion">Suggestion</string>
    <string name="desc_home">Home</string>
    <string name="desc_menu">Menu</string>
    <string name="action_mark">Mark as ad</string>
    <string name="dialog_confirm_mark">Would you like to mark this as ad?</string>
    <string name="do_not_track">Do not track</string>
    <string name="color_mode">Color mode</string>
    <string name="dialog_sure">Are you sure you want to proceed?</string>
    <string name="settings_cloud">Account</string>
    <string name="user">Log in/Sign up</string>
    <string name="user_syns">Sync</string>
    <string name="user_update">Upload</string>
    <string name="wrong_psw">Wrong password.</string>
    <string name="sign_up_success">Sign up successful</string>
    <string name="code_500">Service unavailable.</string>
    <string name="syns_success">Sync complete</string>
    <string name="upload_success">Upload complete</string>
    <string name="log_out">Log out?</string>
    <string name="crash_restart">Restart</string>
    <string name="crash_close">Close</string>
    <string name="ui_mode">Toolbar UI mode</string>
    <string name="addon_download">Download manager</string>
    <string name="quick_back">Go back without reloading</string>
    <string name="open_with">Open with</string>
    <string name="download_completed">Download completed</string>
    <string name="toast_fullscreen_off">Exit full-screen mode</string>
    <string name="clear_data">Clear data</string>
    <string name="data_cache">Cache</string>
    <string name="data_form_data">Form data</string>
    <string name="data_history">History</string>
    <string name="data_storage">Web storage</string>
    <string name="data_cookies">Cookies (Login status)</string>
    <string name="data_cleared">Data cleared</string>
    <string name="settings_skin">Customization</string>
    <string name="default_set">Default</string>
    <string name="picture">Picture</string>
    <string name="text">Text</string>
    <string name="html_code">HTML code</string>
    <string name="action_view_image">View image</string>
    <string name="action_save_web_page">Save page</string>
    <string name="action_saved_pages">Saved pages</string>
    <string name="saved_page_successfully">Webpage has been saved to: Bookmarks > Saved pages</string>
    <string name="deleted_failed">Failed to delete. The file is located in download path: </string>
    <string name="empty_hint">Empty</string>
    <string name="network_log">Network log</string>
    <string name="conn_timeout">Connection timed out</string>
    <string name="sync_prompt">Your current local bookmarks and settings will be overwritten. Continue?</string>
    <string name="upload_prompt">Your current local bookmarks and settings will be uploaded. Continue?</string>
    <string name="none">None</string>
    <string name="check_permission">Permission denied. Would you like to set it in settings now?</string>
    <string name="restore_tabs_hint">Would you like to restore unclosed tabs from the last session?</string>
    <string name="restore_tabs">Restore tabs on startup</string>
    <string name="log_page_hint">Blocked list is in %1$s.\nYou can edit the list, or long-press the following item to enable/disable its blockade.</string>
    <string name="fullscreen_1">Scroll to hide/show</string>
    <string name="fullscreen_2">Press to hide/show</string>
    <string name="settings_script">Scripts</string>
    <string name="add_script">New script</string>
    <string name="script_code">Code (JavaScript)</string>
    <string name="help_us_translate">Help us translate</string>
    <string name="confirm_to_leave">Confirm to leave</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="skin_logo">Logo</string>
    <string name="skin_bg">Background</string>
    <string name="set_it_as_homepage">Would you like to set it as homepage?</string>
    <string name="missing_webview">Android System WebView isn\'t installed correctly. Would you like to install it now?</string>
    <string name="install">Install</string>
    <string name="crash_hint">We\'re sorry that the app crashed.</string>
    <string name="glean">Glean</string>
    <string name="contact_us">Contact us</string>
    <string name="official_website">Official website</string>
    <string name="action_pic_mode">Picture mode</string>
    <string name="find_next">Find next</string>
    <string name="find_pre">Find last</string>
    <string name="action_add_to_homepage">Add to homepage</string>
    <string name="title_edit_favorite">Edit favorite</string>
    <string name="welcome">Welcome</string>
    <string name="agree_and_continue">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="done">Done</string>
    <string name="action_favorites">Favorites</string>
    <string name="skin_search_bar">Search bar</string>
    <string name="desc_favorite_icon">Icon of a favorite</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="webdav_configuration">WebDAV configuration</string>
    <string name="mark_as_ad_expand">Expand</string>
    <string name="mark_as_ad_shrink">Shrink</string>
    <string name="mark_as_ad_move_view">Move view</string>
    <string name="mark_as_ad_guide">Please click on the ad area to mark it</string>
    <string name="log_out_webdav">Log out</string>
</resources>