<?xml version="1.0" encoding="utf-8"?>
<!-- original/res/layout/o.xml, ob.i -->
<RelativeLayout android:paddingTop="6dp" android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center_vertical" android:id="@+id/webdav_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="0dp" android:text="@string/webdav_configuration" android:layout_alignTop="@+id/webdav_advanced" android:layout_alignBottom="@+id/webdav_advanced" android:textDirection="locale" android:layout_toStartOf="@+id/webdav_advanced" style="@style/Via.Dialog.Title" />
    <TextView android:ellipsize="end" android:gravity="center" android:id="@+id/webdav_advanced" android:background="@drawable/rounded_rect_ripple" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:text="@string/settings_advanced" android:layout_alignParentEnd="true" style="@style/Sync.Dialog.Input" />
    <EditText android:id="@+id/webdav_url" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_url" android:layout_below="@+id/webdav_title" android:inputType="textUri|textNoSuggestions" android:imeOptions="actionDone" style="@style/Sync.Dialog.Input" />
    <EditText android:id="@+id/webdav_username" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_username" android:layout_below="@+id/webdav_url" android:inputType="textNoSuggestions" android:imeOptions="actionNext" style="@style/Sync.Dialog.Input" />
    <EditText android:id="@+id/webdav_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_password" android:layout_below="@+id/webdav_username" android:inputType="textPassword|textNoSuggestions" android:imeOptions="actionNext" style="@style/Sync.Dialog.Input" />
    <TextView android:id="@+id/webdav_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/ok" android:layout_below="@+id/webdav_password" android:layout_alignParentEnd="true" style="@style/Via.Dialog.Button" />
    <TextView android:id="@+id/webdav_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/cancel" android:layout_below="@+id/webdav_password" android:layout_toStartOf="@+id/webdav_ok" style="@style/Via.Dialog.Button" />
    <TextView android:id="@+id/webdav_logout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/log_out_webdav" android:layout_below="@+id/webdav_password" android:layout_alignParentStart="true" style="@style/Via.Dialog.Button" />
</RelativeLayout>
