<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
 <shortcut android:shortcutId="scan" android:enabled="true" android:icon="@drawable/shortcut_scan" android:shortcutShortLabel="@string/scan_qr_code" android:shortcutLongLabel="@string/scan_qr_code" android:shortcutDisabledMessage="@string/scan_qr_code"><intent android:action="dev.ujhhgtg.via.SCAN" android:targetPackage="dev.ujhhgtg.via" android:targetClass="dev.ujhhgtg.via.Trampoline"/></shortcut>
 <shortcut android:shortcutId="search" android:enabled="true" android:icon="@drawable/shortcut_search" android:shortcutShortLabel="@string/search_hint" android:shortcutLongLabel="@string/search_hint" android:shortcutDisabledMessage="@string/search_hint"><intent android:action="dev.ujhhgtg.via.SEARCH" android:targetPackage="dev.ujhhgtg.via" android:targetClass="dev.ujhhgtg.via.Trampoline"/></shortcut>
 <shortcut android:shortcutId="history" android:enabled="true" android:icon="@drawable/shortcut_history" android:shortcutShortLabel="@string/action_history" android:shortcutLongLabel="@string/action_history" android:shortcutDisabledMessage="@string/action_history"><intent android:action="dev.ujhhgtg.via.HISTORY" android:targetPackage="dev.ujhhgtg.via" android:targetClass="dev.ujhhgtg.via.Trampoline"/></shortcut>
 <shortcut android:shortcutId="bookmark" android:enabled="true" android:icon="@drawable/shortcut_bookmark" android:shortcutShortLabel="@string/action_bookmarks" android:shortcutLongLabel="@string/action_bookmarks" android:shortcutDisabledMessage="@string/action_bookmarks"><intent android:action="dev.ujhhgtg.via.BOOKMARK" android:targetPackage="dev.ujhhgtg.via" android:targetClass="dev.ujhhgtg.via.Trampoline"/></shortcut>
</shortcuts>
