<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingTop="12.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@+id/bookmark_edit_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title_edit_bookmark" android:textDirection="locale" style="@style/Via.Dialog.Title" />
    <HorizontalScrollView android:id="@+id/bookmark_title_scroll" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dp" android:fillViewport="true" android:layout_below="@+id/bookmark_edit_title" style="@style/Password.Dialog.InputScroll">
        <EditText android:id="@+id/bookmark_title_input" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/hint_title" android:inputType="textNoSuggestions" android:imeOptions="actionNext" android:textDirection="locale" style="@style/Password.Dialog.Input" />
    </HorizontalScrollView>
    <HorizontalScrollView android:id="@+id/bookmark_url_scroll" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dp" android:fillViewport="true" android:layout_below="@+id/bookmark_title_scroll" style="@style/Password.Dialog.InputScroll">
        <EditText android:id="@+id/bookmark_url_input" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/hint_url" android:inputType="textUri|textNoSuggestions" android:imeOptions="actionDone" style="@style/Password.Dialog.Input" />
    </HorizontalScrollView>
    <TextView android:ellipsize="end" android:id="@+id/bookmark_folder_choice" android:background="@drawable/bookmark_folder_input" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dp" android:hint="@string/hint_folder" android:layout_below="@+id/bookmark_url_scroll" android:textDirection="locale" style="@style/Bookmark.Dialog.FolderChoice" />
    <CheckBox android:id="@+id/bookmark_add_home" android:padding="8.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginRight="16.0dp" android:layout_marginBottom="12.0dp" android:button="?attr/viaChoiceIndicator" android:text="@string/action_add_to_homepage" android:layout_below="@+id/bookmark_folder_choice" android:textDirection="locale" style="@style/Via.Dialog.SecondaryText" />
    <TextView android:id="@+id/bookmark_edit_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/ok" android:layout_below="@+id/bookmark_add_home" android:layout_alignParentEnd="true" style="@style/Via.Dialog.Button" />
    <TextView android:textColor="@color/via_warning" android:id="@+id/bookmark_edit_delete" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_delete" android:layout_below="@+id/bookmark_add_home" android:layout_alignParentStart="true" style="@style/Via.Dialog.Button" />
    <TextView android:id="@+id/bookmark_edit_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/cancel" android:layout_below="@+id/bookmark_add_home" android:layout_toStartOf="@+id/bookmark_edit_ok" style="@style/Via.Dialog.Button" />
</RelativeLayout>
