<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Space android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" />
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="120dp" android:layout_height="120dp" android:src="@drawable/via_mark" android:contentDescription="@string/app_name" />
        <Space android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" />
        <TextView android:textSize="22sp" android:textColor="?attr/viaPrimaryTextColor" android:layout_gravity="center_horizontal" android:id="@+id/welcome_title" android:nextFocusDown="@id/welcome_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome" android:textDirection="locale" />
        <TextView android:textSize="14sp" android:textColor="?attr/viaPrimaryTextColor" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/welcome_agreement" android:nextFocusUp="@id/welcome_title" android:nextFocusDown="@id/welcome_accept" android:layout_width="260dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:lineSpacingMultiplier="1.2" android:textDirection="locale" />
        <TextView android:textSize="14sp" android:textColor="?attr/viaAccentTextColor" android:ellipsize="end" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/welcome_accept" android:paddingLeft="16dp" android:paddingTop="12dp" android:paddingRight="16dp" android:paddingBottom="12dp" android:nextFocusUp="@id/welcome_agreement" android:nextFocusDown="@id/welcome_decline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4dp" android:minWidth="216dp" android:text="@string/agree_and_continue" android:lines="1" />
        <TextView android:textSize="14sp" android:textColor="?attr/viaSecondaryTextColor" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/welcome_decline" android:background="@drawable/rounded_rect_ripple" android:paddingLeft="16dp" android:paddingTop="8dp" android:paddingRight="16dp" android:paddingBottom="8dp" android:nextFocusUp="@id/welcome_accept" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:minWidth="80dp" android:text="@string/disagree" />
    </LinearLayout>
</ScrollView>
